tests/sksl/errors/StaticSwitchConditionalBreak.glsl
### Compilation failed:

error: 2: static switch contains non-static conditional break
1 error
